Change login prompt to use a link instead of a button

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
                 CREATE ACCOUNT & PLAY
             </button>
 
-            <p class="text-center text-sm text-gray-500">
-                Already have an account? 
-                <button onclick="toggleLogin()" class="text-orange-600 font-bold hover:underline cursor-pointer">Login here</button>
-            </p>
+         <p class="text-center text-sm text-gray-500">
+    Already have an account? 
+    <a href="login.html" class="text-orange-600 font-bold hover:underline">Login here</a>
+</p>
+
         </div>
     </div>
 
