Update tagline in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="bg-white p-8 rounded-3xl shadow-2xl w-full max-w-md border-b-8 border-orange-600">
         <div class="text-center mb-6">
             <h1 class="text-4xl font-black text-orange-600 uppercase tracking-tighter">Chicken League</h1>
-            <p class="text-gray-500 font-bold text-sm">The #1 Poultry Gaming Arena in Nigeria</p>
+            <p class="text-gray-500 font-bold text-sm">The #1 Poultry Gaming Arena </p>
         </div>
 
         <div id="logged_in_view" class="hidden space-y-4 text-center">
