--- a/index.html
+++ b/index.html
@@ -44,50 +44,32 @@
     </div>
 
     <script>
-        const SB_URL = 'https://tbvmgcknkwsucstedigd.supabase.co';
-        const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRidm1nY2tua3dzdWNzdGVkaWdkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc5ODgwMjQsImV4cCI6MjA4MzU2NDAyNH0.OhfvqWaGLwNvIJq8TBDomdtKWDII5MvC6zhKKJBUD9Q';
-        const supabase = window.supabase.createClient(SB_URL, SB_KEY);
+    const SB_URL = 'https://tbvmgcknkwsucstedigd.supabase.co';
+    const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRidm1nY2tua3dzdWNzdGVkaWdkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc5ODgwMjQsImV4cCI6MjA4MzU2NDAyNH0.OhfvqWaGLwNvIJq8TBDomdtKWDII5MvC6zhKKJBUD9Q';
+    const supabase = window.supabase.createClient(SB_URL, SB_KEY);
 
-        window.onload = function() {
-            // Check if user is already in LocalStorage
-            const savedUser = localStorage.getItem('league_user');
-            if (savedUser) {
-                document.getElementById('signup_view').classList.add('hidden');
-                document.getElementById('logged_in_view').classList.remove('hidden');
-                document.getElementById('display_user').innerText = savedUser;
-            }
+    async function registerUser() {
+        alert("Action Triggered!"); // If you see this, the button works!
+        
+        const u = document.getElementById('u_f').value;
+        const ph = document.getElementById('ph_f').value;
+        const ps = document.getElementById('ps_f').value;
 
-            // Signup Logic
-            const btn = document.getElementById('mainBtn');
-            btn.addEventListener('click', async () => {
-                const u = document.getElementById('u_f').value.trim();
-                const ph = document.getElementById('ph_f').value.trim();
-                const ps = document.getElementById('ps_f').value.trim();
+        const { data, error } = await supabase
+            .from('Profiles')
+            .insert([{ public_username: u, phone_number: ph, password: ps, total_score: 0 }]);
 
-                if (!u || !ph || !ps) { alert("Missing fields!"); return; }
-
-                btn.innerText = "VERIFYING...";
-                btn.disabled = true;
-
-                const { data, error } = await supabase
-                    .from('Profiles') // Matching your Capital 'P'
-                    .insert([{ public_username: u, phone_number: ph, password: ps, total_score: 0 }]);
-
-                if (error) {
-                    alert("Database said: " + error.message);
-                    btn.innerText = "JOIN THE LEAGUE";
-                    btn.disabled = false;
-                } else {
-                    localStorage.setItem('league_user', u);
-                    window.location.href = "dashboard.html";
-                }
-            });
-        };
-
-        function logout() {
-            localStorage.clear();
-            location.reload();
+        if (error) {
+            alert("Database Error: " + error.message);
+        } else {
+            alert("SUCCESS!");
+            localStorage.setItem('league_user', u);
+            window.location.href = "dashboard.html";
         }
-    </script>
+    }
+</script>
+
+<button type="button" onclick="registerUser()" id="mainBtn" class="your-styles-here">JOIN THE LEAGUE</button>
+
 </body>
 </html>
