--- a/index.html
+++ b/index.html
@@ -12,64 +12,97 @@
     <div class="bg-white p-8 rounded-3xl shadow-2xl w-full max-w-md border-b-8 border-orange-600">
         <div class="text-center mb-6">
             <h1 class="text-4xl font-black text-orange-600 uppercase tracking-tighter">Chicken League</h1>
-            <p class="text-gray-500 font-bold text-sm">The #1 Poultry Gaming Arena </p>
+            <p class="text-gray-500 font-bold text-sm">Join the Poultry Revolution</p>
         </div>
 
         <div id="logged_in_view" class="hidden space-y-4 text-center">
             <div class="p-4 bg-orange-100 rounded-2xl border-2 border-orange-200">
-                <p class="text-orange-800 font-bold">Welcome back, <span id="display_user" class="text-xl text-orange-600 underline"></span>!</p>
+                <p class="text-orange-800 font-bold">Welcome back, <span id="display_user" class="text-orange-600"></span>!</p>
             </div>
-            <button onclick="window.location.href='dashboard.html'" class="w-full bg-orange-600 text-white font-black py-5 rounded-2xl shadow-xl hover:bg-orange-700 transition">
-                CONTINUE TO DASHBOARD
-            </button>
-            <button onclick="logout()" class="text-xs text-gray-400 font-bold uppercase tracking-widest hover:text-red-500">Switch Account</button>
+            <button onclick="window.location.href='dashboard.html'" class="w-full bg-orange-600 text-white font-black py-5 rounded-2xl shadow-xl">CONTINUE TO DASHBOARD</button>
+            <button onclick="logout()" class="text-xs text-gray-400 font-bold uppercase tracking-widest mt-4">Log Out / Switch Account</button>
         </div>
 
         <div id="signup_view" class="space-y-4">
             <div class="space-y-3">
-                <input type="text" id="u_f" placeholder="Username (e.g. FarmBoss)" class="w-full p-4 bg-gray-50 border-2 border-gray-100 rounded-2xl focus:border-orange-500 outline-none transition">
-                <input type="tel" id="ph_f" placeholder="WhatsApp Number" class="w-full p-4 bg-gray-50 border-2 border-gray-100 rounded-2xl focus:border-orange-500 outline-none transition">
-                <input type="password" id="ps_f" placeholder="Create Password" class="w-full p-4 bg-gray-50 border-2 border-gray-100 rounded-2xl focus:border-orange-500 outline-none transition">
+                <input type="text" id="u_f" placeholder="Public Username" class="w-full p-4 bg-gray-50 border-2 border-gray-100 rounded-2xl focus:border-orange-500 outline-none">
+                <input type="tel" id="ph_f" placeholder="WhatsApp Number" class="w-full p-4 bg-gray-50 border-2 border-gray-100 rounded-2xl focus:border-orange-500 outline-none">
+                <input type="password" id="ps_f" placeholder="Create Password" class="w-full p-4 bg-gray-50 border-2 border-gray-100 rounded-2xl focus:border-orange-500 outline-none">
             </div>
             
-            <button type="button" id="mainBtn" class="w-full bg-orange-600 text-white font-black py-5 rounded-2xl shadow-xl active:scale-95 transition-all">
+            <button type="button" id="mainBtn" onclick="registerUser()" class="w-full bg-orange-600 text-white font-black py-5 rounded-2xl shadow-xl active:scale-95 transition-all">
                 JOIN THE LEAGUE
             </button>
 
             <div class="pt-4 border-t border-gray-100 text-center">
                 <p class="text-sm text-gray-500 font-medium">Already a Legend?</p>
-                <a href="login.html" class="text-orange-600 font-black hover:underline decoration-2 underline-offset-4">LOGIN TO YOUR ACCOUNT</a>
+                <a href="login.html" class="text-orange-600 font-black hover:underline">LOGIN TO ACCOUNT</a>
             </div>
         </div>
     </div>
 
     <script>
-    const SB_URL = 'https://tbvmgcknkwsucstedigd.supabase.co';
-    const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRidm1nY2tua3dzdWNzdGVkaWdkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc5ODgwMjQsImV4cCI6MjA4MzU2NDAyNH0.OhfvqWaGLwNvIJq8TBDomdtKWDII5MvC6zhKKJBUD9Q';
-    const supabase = window.supabase.createClient(SB_URL, SB_KEY);
+        // Initialize Connection
+        const SB_URL = 'https://tbvmgcknkwsucstedigd.supabase.co';
+        const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRidm1nY2tua3dzdWNzdGVkaWdkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc5ODgwMjQsImV4cCI6MjA4MzU2NDAyNH0.OhfvqWaGLwNvIJq8TBDomdtKWDII5MvC6zhKKJBUD9Q';
+        const supabase = window.supabase.createClient(SB_URL, SB_KEY);
 
-    async function registerUser() {
-        alert("Action Triggered!"); // If you see this, the button works!
-        
-        const u = document.getElementById('u_f').value;
-        const ph = document.getElementById('ph_f').value;
-        const ps = document.getElementById('ps_f').value;
+        // Check login status on page load
+        window.onload = function() {
+            const savedUser = localStorage.getItem('league_user');
+            if (savedUser) {
+                document.getElementById('signup_view').classList.add('hidden');
+                document.getElementById('logged_in_view').classList.remove('hidden');
+                document.getElementById('display_user').innerText = savedUser;
+            }
+        };
 
-        const { data, error } = await supabase
-            .from('Profiles')
-            .insert([{ public_username: u, phone_number: ph, password: ps, total_score: 0 }]);
+        async function registerUser() {
+            const btn = document.getElementById('mainBtn');
+            const u = document.getElementById('u_f').value.trim();
+            const ph = document.getElementById('ph_f').value.trim();
+            const ps = document.getElementById('ps_f').value.trim();
 
-        if (error) {
-            alert("Database Error: " + error.message);
-        } else {
-            alert("SUCCESS!");
-            localStorage.setItem('league_user', u);
-            window.location.href = "dashboard.html";
+            if (!u || !ph || !ps) {
+                alert("Please fill all fields!");
+                return;
+            }
+
+            btn.innerText = "AUTHENTICATING...";
+            btn.disabled = true;
+
+            try {
+                // Root Solution: We insert only user data. 
+                // Database handles the 'id' automatically now.
+                const { data, error } = await supabase
+                    .from('Profiles')
+                    .insert([{ 
+                        public_username: u, 
+                        phone_number: ph, 
+                        password: ps, 
+                        total_score: 0 
+                    }]);
+
+                if (error) {
+                    alert("Database Error: " + error.message);
+                    btn.innerText = "JOIN THE LEAGUE";
+                    btn.disabled = false;
+                } else {
+                    alert("SUCCESS! WELCOME TO THE ARENA.");
+                    localStorage.setItem('league_user', u);
+                    window.location.href = "dashboard.html";
+                }
+            } catch (err) {
+                alert("Critical System Error: " + err.message);
+                btn.innerText = "RETRY";
+                btn.disabled = false;
+            }
         }
-    }
-</script>
 
-<button type="button" onclick="registerUser()" id="mainBtn" class="your-styles-here">JOIN THE LEAGUE</button>
-
+        function logout() {
+            localStorage.clear();
+            location.reload();
+        }
+    </script>
 </body>
 </html>
