--- a/login.html
+++ b/login.html
@@ -9,37 +9,62 @@
 </head>
 <body class="bg-orange-50 min-h-screen flex flex-col items-center justify-center p-4">
     <div class="bg-white p-8 rounded-3xl shadow-2xl w-full max-w-md border-b-8 border-orange-600">
-        <h1 class="text-2xl font-black text-orange-600 text-center mb-6">WELCOME BACK</h1>
+        <h1 class="text-2xl font-black text-orange-600 text-center mb-6 uppercase">Welcome Back</h1>
         <div class="space-y-4">
-            <input type="tel" id="login_phone" placeholder="WhatsApp Number" class="w-full p-3 bg-gray-50 border-2 border-gray-100 rounded-xl outline-none">
-            <input type="password" id="login_pass" placeholder="Password" class="w-full p-3 bg-gray-50 border-2 border-gray-100 rounded-xl outline-none">
-            <button onclick="handleLogin()" id="loginBtn" class="w-full bg-orange-600 text-white font-bold py-4 rounded-xl shadow-lg hover:bg-orange-700 transition">LOGIN TO ARENA</button>
-            <p class="text-center text-sm"><a href="index.html" class="text-orange-600 font-bold">Need an account? Sign up</a></p>
+            <input type="tel" id="login_phone" placeholder="WhatsApp Number" class="w-full p-4 bg-gray-50 border-2 border-gray-100 rounded-2xl outline-none focus:border-orange-500">
+            <input type="password" id="login_pass" placeholder="Password" class="w-full p-4 bg-gray-50 border-2 border-gray-100 rounded-2xl outline-none focus:border-orange-500">
+            
+            <button onclick="handleLogin()" id="loginBtn" class="w-full bg-orange-600 text-white font-black py-5 rounded-2xl shadow-lg active:scale-95 transition-all">
+                LOGIN TO ARENA
+            </button>
+            
+            <p class="text-center text-sm font-bold pt-2">
+                <a href="index.html" class="text-orange-600 hover:underline underline-offset-4 tracking-tight">NEED AN ACCOUNT? SIGN UP</a>
+            </p>
         </div>
     </div>
 
     <script>
-        const supabaseUrl = 'https://tbvmgcknkwsucstedigd.supabase.co'; 
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRidm1nY2tua3dzdWNzdGVkaWdkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc5ODgwMjQsImV4cCI6MjA4MzU2NDAyNH0.OhfvqWaGLwNvIJq8TBDomdtKWDII5MvC6zhKKJBUD9Q';
-        const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+        const SB_URL = 'https://tbvmgcknkwsucstedigd.supabase.co'; 
+        const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRidm1nY2tua3dzdWNzdGVkaWdkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc5ODgwMjQsImV4cCI6MjA4MzU2NDAyNH0.OhfvqWaGLwNvIJq8TBDomdtKWDII5MvC6zhKKJBUD9Q';
+        // Corrected initialization: window.supabase.createClient
+        const sb = window.supabase.createClient(SB_URL, SB_KEY);
 
         async function handleLogin() {
-            const phone = document.getElementById('login_phone').value;
-            const pass = document.getElementById('login_pass').value;
+            const phone = document.getElementById('login_phone').value.trim();
+            const pass = document.getElementById('login_pass').value.trim();
+            const btn = document.getElementById('loginBtn');
 
-            // Search database for this user
-            const { data, error } = await supabase
-                .from('profiles')
-                .select('*')
-                .eq('phone_number', phone)
-                .eq('password', pass)
-                .single();
+            if (!phone || !pass) {
+                alert("Enter your credentials!");
+                return;
+            }
 
-            if (data) {
-                localStorage.setItem('league_user', data.public_username);
-                window.location.href = "game.html";
-            } else {
-                alert("Invalid Phone Number or Password. Please try again.");
+            btn.innerText = "VERIFYING...";
+            btn.disabled = true;
+
+            try {
+                // Fixed table name to 'Profiles' to match our DB Fix
+                const { data, error } = await sb
+                    .from('Profiles')
+                    .select('public_username')
+                    .eq('phone_number', phone)
+                    .eq('password', pass)
+                    .maybeSingle();
+
+                if (error) {
+                    alert("System Error: " + error.message);
+                } else if (data) {
+                    localStorage.setItem('league_user', data.public_username);
+                    window.location.href = "dashboard.html";
+                } else {
+                    alert("No account found with those details. Check your phone number or password.");
+                }
+            } catch (err) {
+                alert("Login failed. Check your connection.");
+            } finally {
+                btn.innerText = "LOGIN TO ARENA";
+                btn.disabled = false;
             }
         }
     </script>
