--- a/admin_panel.html
+++ b/admin_panel.html
@@ -40,37 +40,34 @@
     </div>
 
     <script>
-        const SB_URL = 'https://tbvmgcknkwsucstedigd.supabase.co';
-        const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRidm1nY2tua3dzdWNzdGVkaWdkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc5ODgwMjQsImV4cCI6MjA4MzU2NDAyNH0.OhfvqWaGLwNvIJq8TBDomdtKWDII5MvC6zhKKJBUD9Q';
-        const sb = window.supabase.createClient(SB_URL, SB_KEY);
+    // THE HANDSHAKE CONFIG
+    const ADMIN_SECRET = "CL_BOSS_2026"; // Change this to your preferred secret key
 
-        async function loadPlayers() {
-            const { data, error } = await sb
-                .from('Battle_Royale_1')
-                .select('*')
-                .order('joined_at', { ascending: false });
+    window.onload = function() {
+        const urlParams = new URLSearchParams(window.location.search);
+        const enteredKey = urlParams.get('key');
 
-            if (data) {
-                document.getElementById('total_count').innerText = data.length;
-                const list = document.getElementById('player_list');
-                list.innerHTML = data.map(p => `
-                    <tr class="border-t border-gray-800">
-                        <td class="p-4 font-bold text-orange-400">${p.player_username}</td>
-                        <td class="p-4 text-gray-500 text-sm">${new Date(p.joined_at).toLocaleTimeString()}</td>
-                    </tr>
-                `).join('');
-            }
+        if (enteredKey !== ADMIN_SECRET) {
+            document.body.innerHTML = `
+                <div class="h-screen flex items-center justify-center bg-black text-red-600 font-mono p-10 text-center">
+                    <div>
+                        <h1 class="text-5xl mb-4">🚫 ACCESS DENIED</h1>
+                        <p>INVALID HANDSHAKE KEY. CLEARANCE REQUIRED.</p>
+                    </div>
+                </div>`;
+            return;
         }
-
-        async function clearLobby() {
-            if(confirm("DANGER: This will kick everyone out of the lobby. Proceed?")) {
-                const { error } = await sb.from('Battle_Royale_1').delete().neq('player_username', '0');
-                if (!error) location.reload();
-            }
-        }
-
-        setInterval(loadPlayers, 3000);
+        // If key is correct, proceed to load the panel
         loadPlayers();
-    </script>
+        setInterval(loadPlayers, 3000);
+    };
+
+    const SB_URL = 'https://tbvmgcknkwsucstedigd.supabase.co';
+    const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRidm1nY2tua3dzdWNzdGVkaWdkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc5ODgwMjQsImV4cCI6MjA4MzU2NDAyNH0.OhfvqWaGLwNvIJq8TBDomdtKWDII5MvC6zhKKJBUD9Q';
+    const sb = window.supabase.createClient(SB_URL, SB_KEY);
+    
+    // ... rest of your loadPlayers and clearLobby functions ...
+</script>
+
 </body>
 </html>
