--- a/dashboard.html
+++ b/dashboard.html
@@ -39,6 +39,13 @@
         <button onclick="shareInvite()" class="bg-white/10 hover:bg-white/20 px-4 py-2 rounded-full text-[10px] font-black border border-white/20 uppercase">Invite +</button>
     </div>
 
+
+    <div id="battle_alert" class="hidden max-w-md mx-auto mb-4 p-4 bg-green-600 rounded-2xl animate-pulse flex items-center justify-between border-2 border-white">
+    <span class="text-xs font-black uppercase">🚨 ALL SLOTS FILLED: PREPARE FOR BATTLE!</span>
+</div>
+
+
+
     <div class="max-w-md mx-auto glass-panel rounded-[2rem] overflow-hidden mb-6 relative border-b-4 border-orange-600">
         <div class="h-56 bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1587334274328-64186a80aeee?auto=format&fit=crop&q=80&w=1000');">
             <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent"></div>
