Update background image in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -47,7 +47,8 @@
 
 
     <div class="max-w-md mx-auto glass-panel rounded-[2rem] overflow-hidden mb-6 relative border-b-4 border-orange-600">
-<div class="h-56 bg-cover bg-center" style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9-N0p-x0E_A8xH0O9X6Z6XqS0qV6XqS0qVw&usqp=CAU');"> 
+<div class="h-56 bg-cover bg-center" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Broiler_chicken.jpg/1200px-Broiler_chicken.jpg');">
+
     
 
 
