--- a/dashboard.html
+++ b/dashboard.html
@@ -47,11 +47,7 @@
 
 
     <div class="max-w-md mx-auto glass-panel rounded-[2rem] overflow-hidden mb-6 relative border-b-4 border-orange-600">
-<div class="h-56 bg-cover bg-center" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/Broiler_chicken.jpg/1200px-Broiler_chicken.jpg');">
-
-    
-
-
+<div class="h-56 bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1628151015968-3a4429e9ef04?auto=format&fit=crop&q=80&w=1000');">
             <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent"></div>
             <div class="absolute bottom-4 left-6">
                 <span class="bg-orange-600 text-[10px] font-black px-3 py-1 rounded-full mb-2 inline-block">GRAND PRIZE</span>
