--- a/dashboard.html
+++ b/dashboard.html
@@ -47,7 +47,7 @@
 
 
     <div class="max-w-md mx-auto glass-panel rounded-[2rem] overflow-hidden mb-6 relative border-b-4 border-orange-600">
-<div class="h-56 bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1628151015968-3a4429e9ef04?auto=format&fit=crop&q=80&w=1000');">
+<div class="h-56 bg-cover bg-center" style="background-image: url('https://st2.depositphotos.com/1020341/7222/i/450/depositphotos_72221005-stock-photo-hen-isolated-on-white-background.jpg');">
             <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent"></div>
             <div class="absolute bottom-4 left-6">
                 <span class="bg-orange-600 text-[10px] font-black px-3 py-1 rounded-full mb-2 inline-block">GRAND PRIZE</span>
