--- a/dashboard.html
+++ b/dashboard.html
@@ -47,7 +47,8 @@
 
 
     <div class="max-w-md mx-auto glass-panel rounded-[2rem] overflow-hidden mb-6 relative border-b-4 border-orange-600">
-<div class="h-56 bg-cover bg-center" style="background-image: url('https://i.ibb.co/qYSmTyxm/IMG-2414.png');">
+<div class="h-56 bg-contain bg-center bg-no-repeat bg-gray-900/50" style="background-image: url('https://i.ibb.co/qYSmTyxm/IMG-2414.png'); background-size: 80%;"></div>
+
             <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent"></div>
             <div class="absolute bottom-4 left-6">
                 <span class="bg-orange-600 text-[10px] font-black px-3 py-1 rounded-full mb-2 inline-block">GRAND PRIZE</span>
