--- a/dashboard.html
+++ b/dashboard.html
@@ -47,9 +47,10 @@
 
 
     <div class="max-w-md mx-auto glass-panel rounded-[2rem] overflow-hidden mb-6 relative border-b-4 border-orange-600">
-<div class="h-56 bg-cover bg-center shadow-inner border-b border-white/10" 
-     style="background-image: url('https://i.ibb.co/qYSmTyxm/IMG-2414.png'); background-position: center; background-repeat: no-repeat;">
+<div class="h-56 bg-cover bg-center border-b border-white/10" 
+     style="background-image: url('https://img.freepik.com/premium-photo/white-hen-walking-white-background-chicken-isolated-white-background_1025754-154.jpg');">
 </div>
+
 
 
             <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent"></div>
