--- a/dashboard.html
+++ b/dashboard.html
@@ -48,7 +48,7 @@
 
     <div class="max-w-md mx-auto glass-panel rounded-[2rem] overflow-hidden mb-6 relative border-b-4 border-orange-600">
 <div class="h-56 bg-cover bg-center border-b border-white/10" 
-     style="background-image: url('https://img.freepik.com/premium-photo/white-hen-walking-white-background-chicken-isolated-white-background_1025754-154.jpg');">
+     style="background-image: url('https://i.postimg.cc/MZtTXyV3/IMG-2475.png');">
 </div>
 
 
