--- a/dashboard.html
+++ b/dashboard.html
@@ -73,29 +73,41 @@
             </div>
         </div>
 
-        <div class="grid gap-4">
-            <a href="lobby_top2.html" class="glass-card p-6 flex items-center justify-between group active:scale-95 transition-all">
-                <div class="flex items-center gap-4">
-                    <div class="h-12 w-12 rounded-2xl bg-orange-600/20 flex items-center justify-center text-orange-500 font-bold">02</div>
-                    <div>
-                        <h3 class="font-black italic uppercase text-lg leading-tight">Test League</h3>
-                        <p class="text-gray-500 text-[10px] font-bold uppercase tracking-wide">Trial Environment • 2 Slots</p>
-                    </div>
-                </div>
-                <div class="text-orange-500 font-black">→</div>
-            </a>
-
-            <a href="lobby_top100.html" class="glass-card p-6 flex items-center justify-between opacity-40 group">
-                <div class="flex items-center gap-4">
-                    <div class="h-12 w-12 rounded-2xl bg-white/10 flex items-center justify-center text-white font-bold">100</div>
-                    <div>
-                        <h3 class="font-black italic uppercase text-lg leading-tight">Pro League</h3>
-                        <p class="text-gray-500 text-[10px] font-bold uppercase tracking-wide">Elite Battle • 100 Slots</p>
-                    </div>
-                </div>
-                <div class="text-gray-600">🔒</div>
-            </a>
+     <div class="grid gap-4">
+    <a href="1in2.html" class="glass-card p-6 flex items-center justify-between group active:scale-95 transition-all border-l-4 border-orange-600">
+        <div class="flex items-center gap-4">
+            <div class="h-12 w-12 rounded-full bg-orange-600/10 flex items-center justify-center text-orange-500 font-black">2</div>
+            <div>
+                <h3 class="font-black italic uppercase text-lg leading-tight">Duo Duel</h3>
+                <p class="text-gray-500 text-[10px] font-bold uppercase tracking-wide">1 IN 2 • Instant Payout</p>
+            </div>
         </div>
+        <div class="text-orange-500 font-black animate-pulse">LIVE</div>
+    </a>
+
+    <a href="1in5.html" class="glass-card p-6 flex items-center justify-between group active:scale-95 transition-all border-l-4 border-blue-600">
+        <div class="flex items-center gap-4">
+            <div class="h-12 w-12 rounded-full bg-blue-600/10 flex items-center justify-center text-blue-500 font-black">5</div>
+            <div>
+                <h3 class="font-black italic uppercase text-lg leading-tight">Squad Clash</h3>
+                <p class="text-gray-500 text-[10px] font-bold uppercase tracking-wide">1 IN 5 • Higher Yield</p>
+            </div>
+        </div>
+        <div class="text-blue-500 font-black">OPEN</div>
+    </a>
+
+    <a href="1in100.html" class="glass-card p-6 flex items-center justify-between group active:scale-95 transition-all border-l-4 border-green-600">
+        <div class="flex items-center gap-4">
+            <div class="h-12 w-12 rounded-full bg-green-600/10 flex items-center justify-center text-green-500 font-black">100</div>
+            <div>
+                <h3 class="font-black italic uppercase text-lg leading-tight">Century Battle</h3>
+                <p class="text-gray-500 text-[10px] font-bold uppercase tracking-wide">1 IN 100 • The Mature Broiler</p>
+            </div>
+        </div>
+        <div class="text-green-500 font-black">SOON</div>
+    </a>
+</div>
+
     </main>
 
     <nav class="bottom-nav">
